kubernetes/graylog/graylog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog-deploy
  namespace: graylog
  labels:
    service: graylog-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      service: graylog-deploy
  template:
    metadata:
      labels:
        service: graylog-deploy
    spec:
      containers:
      - name: graylog3
        image: graylog/graylog:3.0
        ports:
        - containerPort: 9000
        - containerPort: 12201

---
apiVersion: v1
kind: Service
metadata:
  name: graylog3
  namespace: graylog
spec:
  type: ClusterIP
  selector:
    service: graylog-deploy
  ports:
  - name: "9000"
    port: 9000
    targetPort: 9000
    #nodePort: 30003
  - name: "12201"
    port: 12201
    targetPort: 12201
    #nodePort: 30004
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog3
  namespace: graylog
  labels:
    service: graylog-deploy
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: graylog-dev
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: graylog3
              port:
                number: 9000
